kubernetes/apps/vpn/pod-gateway/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: downloads-gateway-pod-gateway
  namespace: vpn
  labels:
    app.kubernetes.io/instance: downloads-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: downloads-gateway
      app.kubernetes.io/name: pod-gateway
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
    - toEntities:
        - cluster
